--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,10 @@ jobs:
   build: 
     name: license_check
     runs-on: ubuntu-18.04
-    - name: code checkout
-      uses: actions/checkout@v1
-    - name: python setup
-      uses: actions/setup-python@v1
-    - name: build
-      run: 
+    steps:
+     - name: code checkout
+       uses: actions/checkout@v1
+     - name: python setup
+       uses: actions/setup-python@v1
+     - name: build
+       run: cd helloworld && python main.py 
