--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,13 @@ jobs:
        uses: actions/checkout@v1
      - name: python setup
        uses: actions/setup-python@v1
-#      - name: build
-#        run: cd helloworld && python main.py 
-     - name: Python Pylin GitHub Action
-       uses: fylein/python-pylint-github-action@v1
-       with:
-         args: pip3 install -r requirements.txt && pylint --rcfile=.pylintrc ./
+     - name: build
+       run: | 
+           pip install --upgrade pip 
+           pip install pylint
+           pylint ./
+#        run: cd helloworld && python main.py
+#      - name: Python Pylin GitHub Action
+#        uses: fylein/python-pylint-github-action@v1
+#        with:
+#          args: pip3 install -r requirements.txt && pylint --rcfile=.pylintrc ./
