--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
        run: | 
            python -m pip install --upgrade pip
            pip install pylint
-           python helloworld.py --path ./ --threshold 2
+           pylint helloworld.py --path ./ --threshold 2
 #@Nandak99
  
 #        run: cd helloworld && python main.py
