--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: pyliny and build
+name: pylint and build
 on:
   workflow_dispatch: {}
 
 jobs:
   build: 
-    name: license_check
+    name: pylint_check
     runs-on: ubuntu-18.04
     steps:
      - name: code checkout
@@ -15,7 +15,7 @@ jobs:
        run: | 
            python -m pip install --upgrade pip
            pip install pylint
-           pylint helloworld/main.py 
+           pylint helloworld/main.py setup.py
 #@Nandak99
  
 #        run: cd helloworld && python main.py
