--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
        run: | 
            python -m pip install --upgrade pip
            pip install pylint
-           pylint ./ --exit-zero
+           pylint *.py
 #@Nandak99
  
 #        run: cd helloworld && python main.py
