--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,17 @@ jobs:
      - name: python setup
        uses: actions/setup-python@v1
      - name: build
-       run: | 
-           python -m pip install --upgrade pip
-           pip install pylint
-           pylint *.py
+#        run: | 
+#            python -m pip install --upgrade pip
+#            pip install pylint
+#            pylint *.py
+     - name: Running lintering
+       uses: pyrunit/pylint-action@v1.0.0
+       with:
+         source: .
+         useConda: true
+         disable: W1203,C0103
+
 #@Nandak99
  
 #        run: cd helloworld && python main.py
