--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
      - name: Running lintering
        uses: pyrunit/pylint-action@v1.0.0
        with:
-         source: /home/runner/work/python-helloworld/python-helloworld/
-         useConda: true
+#          source: /home/runner/work/python-helloworld/python-helloworld/
+#          useConda: true
          args: "pip install . ; pylint **/*.py"
 
 #@Nandak99
