--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
     #
     #  * smtp://user:password@server:port
     #  * smtp+starttls://user:password@server:port
-        connection_url: ${{secrets.MAIL_CONNECTION}}
+        connection_url: smtp://techdevops001@gail.com:tvkgsyzzoonbepye@smtp.gmail.com:465
     # Required mail server address if not connection_url:
         server_address: smtp.gmail.com
     # Server port, default 25:
@@ -48,32 +48,16 @@ jobs:
     # Optional whether this connection use TLS (default is true if server_port is 465)
         secure: true
     # Optional (recommended): mail server username:
-        username: ${{secrets.MAIL_USERNAME}}
+        username: techdevops001@gmail.com
     # Optional (recommended) mail server password:
-        password: ${{secrets.MAIL_PASSWORD}}
+        password: tvkgsyzzoonbepye
     # Required mail subject:
         subject: Github Actions job result
     # Required recipients' addresses:
-        to: obiwan@example.com,yoda@example.com
+        to: shyam.cbse@gmail.com
     # Required sender full name (address can be skipped):
-        from: Luke Skywalker # <user@example.com>
+        from: Radha-Collegue # <user@example.com>
     # Optional plain body:
-        body: Build job of ${{github.repository}} completed successfully!
-    # Optional HTML body read from file:
-        html_body: file://README.html
-    # Optional carbon copy recipients:
-        cc: kyloren@example.com,leia@example.com
-    # Optional blind carbon copy recipients:
-        bcc: r2d2@example.com,hansolo@example.com
-    # Optional recipient of the email response:
-        reply_to: luke@example.com
-    # Optional Message ID this message is replying to:
-        in_reply_to: <random-luke@example.com>
-    # Optional unsigned/invalid certificates allowance:
+        body: Build job of ${{github.repository}} 
         ignore_cert: true
-    # Optional converting Markdown to HTML (set content_type to text/html too):
-        convert_markdown: true
-    # Optional attachments:
-        attachments: attachments.zip,git.diff,./dist/static/*.js
-    # Optional priority: 'high', 'normal' (default) or 'low'
-        priority: low
+    
