--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   build: 
     name: pylint_check
+    if: always()
     runs-on: ubuntu-18.04
     steps:
      - name: code checkout
@@ -52,12 +53,12 @@ jobs:
     # Optional (recommended) mail server password:
         password: tvkgsyzzoonbepye
     # Required mail subject:
-        subject: Github Actions job result
+        subject:  ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
     # Required recipients' addresses:
         to: shyam.cbse@gmail.com
     # Required sender full name (address can be skipped):
         from: Radha-Collegue # <user@example.com>
     # Optional plain body:
-        body: Build job of ${{github.repository}} 
+        body:  ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
         ignore_cert: true
     
