--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
 #            python -m pip install --upgrade pip
 #            pip install pylint
 #            pylint *.py
-#      - name: Running lintering
-# #        uses: pyrunit/pylint-action@v1.0.0
-#        uses: cclauss/GitHub-Action-for-pylint@master
-#        with:
-# #          source: /home/runner/work/python-helloworld/python-helloworld/
-# #          useConda: true
-#          args: "pip install . ; pylint **/*.py"
+     - name: Running lintering
+#        uses: pyrunit/pylint-action@v1.0.0
+       uses: cclauss/GitHub-Action-for-pylint@master
+       with:
+#          source: /home/runner/work/python-helloworld/python-helloworld/
+         useConda: true
+         args: "pip install . ; pylint **/*.py"
 
 #@Nandak99
  
