--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
 #            python -m pip install --upgrade pip
 #            pip install pylint
 #            pylint *.py
+     - name: printi varaibles
+       run: echo "${{ toJson(github) }}"
      - name: Running lintering
 #        uses: pyrunit/pylint-action@v1.0.0
        uses: cclauss/GitHub-Action-for-pylint@master
