--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,17 +44,18 @@ jobs:
     #
     #  * smtp://user:password@server:port
     #  * smtp+starttls://user:password@server:port
-        connection_url: smtp://techdevops001@gail.com:tvkgsyzzoonbepye@smtp.gmail.com:465
+#         connection_url: smtp://techdevops001@gail.com:tvkgsyzzoonbepye@smtp.gmail.com:465
+        connection_url: smtp://kishorenanda99@outlook.com:mstbarbblxuhxdqy@smtp.office365.com:587
     # Required mail server address if not connection_url:
-        server_address: smtp.gmail.com
+        server_address: smtp.office365.com
     # Server port, default 25:
-        server_port: 465
+        server_port: 587
     # Optional whether this connection use TLS (default is true if server_port is 465)
         secure: true
     # Optional (recommended): mail server username:
-        username: techdevops001@gmail.com
+        username: kishorenanda99@outlook.com
     # Optional (recommended) mail server password:
-        password: tvkgsyzzoonbepye
+        password: mstbarbblxuhxdqy
     # Required mail subject:
         subject:  ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
     # Required recipients' addresses:
