--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
 #            python -m pip install --upgrade pip
 #            pip install pylint
 #            pylint *.py
-     - name: printi varaibles
-       run: echo "${{ toJson(github) }}"
+#      - name: printi varaibles
+#        run: echo "${{ toJson(github) }}"
      - name: Running lintering
 #        uses: pyrunit/pylint-action@v1.0.0
        uses: cclauss/GitHub-Action-for-pylint@master
@@ -49,9 +49,9 @@ jobs:
     # Required mail server address if not connection_url:
         server_address: smtp.office365.com
     # Server port, default 25:
-        server_port: 25
+        server_port: 465
     # Optional whether this connection use TLS (default is true if server_port is 465)
-        secure: true
+       # secure: true
     # Optional (recommended): mail server username:
         username: kishorenanda99@outlook.com
     # Optional (recommended) mail server password:
