--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
     # Server port, default 25:
         server_port: 465
     # Optional whether this connection use TLS (default is true if server_port is 465)
-       # secure: true
+        secure: true
     # Optional (recommended): mail server username:
         username: kishorenanda99@outlook.com
     # Optional (recommended) mail server password:
