--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
     #  * smtp://user:password@server:port
     #  * smtp+starttls://user:password@server:port
 #         connection_url: smtp://techdevops001@gail.com:tvkgsyzzoonbepye@smtp.gmail.com:465
-        connection_url: smtp://kishorenanda99@outlook.com:mstbarbblxuhxdqy@smtp.office365.com:465
+        connection_url: smtp+starttls://kishorenanda99@outlook.com:mstbarbblxuhxdqy@smtp.office365.com:465
     # Required mail server address if not connection_url:
         server_address: smtp.office365.com
     # Server port, default 25:
@@ -61,7 +61,7 @@ jobs:
     # Required recipients' addresses:
         to: shyam.cbse@gmail.com
     # Required sender full name (address can be skipped):
-        from: Radha-Collegue # <user@example.com>
+        from: Radha-boyfriend # <user@example.com>
     # Optional plain body:
         body:  ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
         ignore_cert: true
