--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,14 +45,14 @@ jobs:
     #  * smtp://user:password@server:port
     #  * smtp+starttls://user:password@server:port
 #         connection_url: smtp://techdevops001@gail.com:tvkgsyzzoonbepye@smtp.gmail.com:465
-        connection_url: smtp://kishorenanda99@outlook.com:ahmteoydcrlhiqru@smtp-mail.outlook.com:587
+        connection_url: smtp://kishorenanda99@outlook.com:ahmteoydcrlhiqru@smtp-mail.outlook.com:465
     # Required mail server address if not connection_url:
-#         server_address: smtp-mail.outlook.com
+        server_address: smtp-mail.outlook.com
 #         server_address: smtp.gmail.com
     # Server port, default 25:
-#         server_port: 587
+        server_port: 465
     # Optional whether this connection use TLS (default is true if server_port is 465)
-#         secure: true
+        secure: true
     # Optional (recommended): mail server username:
 #         username: kishorenanda99@outlook.com
 #         username: techdevops001@gmail.com
