--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 #         connection_url: smtp://techdevops001@gail.com:tvkgsyzzoonbepye@smtp.gmail.com:465
 #         connection_url: smtp+starttls://kishorenanda99@outlook.com:ahmteoydcrlhiqru@smtp-mail.outlook.com:587
     # Required mail server address if not connection_url:
-        server_address: smtp.office365.com
+        server_address: smtp-mail.outlook.com
 #         server_address: smtp.gmail.com
     # Server port, default 25:
         server_port: 465
