--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
     # Required mail subject:
         subject:  ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
     # Required recipients' addresses:
-        to: shyam.cbse@gmail.com
+        to: kishorenanda0485@gmail.com
     # Required sender full name (address can be skipped):
         from: Radha-boyfriend # <user@example.com>
     # Optional plain body:
